# agentic-ai-evaluation-release-reliability-framework

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PROJECT_SUMMARY.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dense.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
configs/: dataset.yaml  evaluator_registry.yaml  model_registry.yaml  release_gates.yaml  tool_registry.yaml
docs/: ARCHITECTURE.md  EVALUATION_PROTOCOL.md  GITHUB_SETTINGS_CHECKLIST.md  LIMITATIONS.md  MODEL_CARD.md  RELEASE_CHECKLIST.md  REPOSITORY_MAP.md  REPRODUCIBILITY.md  RESULTS.md  RESUME_CLAIMS.md  THREAT_MODEL.md
reports/: ablation_report.md  dataset_card.md  final_release_manifest.json  final_release_summary.md  final_retrieval_top1_hardening.md  monte_carlo_summary.json  monte_carlo_validation_report.md  package_verification_report.md  project_audit_report.md  public_release_audit.json  public_release_audit.md
scripts/: 00_validate_raw_dataset.py  01_build_dataset.py  02_train_model.py  03_run_evaluation.py  04_replay_failures.py  05_export_reports.py  06_project_audit.py  07_clean_artifacts.py  08_package_release.py  09_run_monte_carlo.py  10_verify_package.py  11_run_real_data_pipeline.py  12_build_stratified_sgd.py  13_evaluate_ood.py  14_run_stratified_real_data_pipeline.py  15_run_ablation.py  16_compare_hardening.py  17_train_retrieval_reranker.py  18_compare_top1_hardening.py  20_public_release_audit.py  (+3 more)
(+122 files in other folders)
