[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-eval-framework"
version = "1.0.0"
description = "Production-oriented framework for evaluating agentic AI systems through deterministic replay, tool-use safety, retrieval quality, Monte Carlo stress testing, and automated release gates."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Jinwoo Bae"}]
license = "Apache-2.0"
dependencies = [
  "numpy>=1.23,<3",
  "scikit-learn>=1.2,<2",
  "joblib>=1.3,<2",
  "pyyaml>=6.0,<7",
  "pydantic>=2.0,<3",
  "fastapi>=0.110,<1",
  "uvicorn>=0.23,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<10",
  "httpx>=0.25,<1",
  "build>=1.2,<2"
]
gpu = [
  "transformers>=4.40,<6",
  "datasets>=2.18,<5",
  "accelerate>=0.29,<2"
]
dense = [
  "sentence-transformers>=3.0,<6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ReviveCoding/agentic-ai-evaluation-release-reliability-framework"
Repository = "https://github.com/ReviveCoding/agentic-ai-evaluation-release-reliability-framework"
Issues = "https://github.com/ReviveCoding/agentic-ai-evaluation-release-reliability-framework/issues"
Documentation = "https://github.com/ReviveCoding/agentic-ai-evaluation-release-reliability-framework/tree/main/docs"
Changelog = "https://github.com/ReviveCoding/agentic-ai-evaluation-release-reliability-framework/blob/main/CHANGELOG.md"
